packages/beff-core/tests/snapshots/report_error__tests__ok1.snap
---
source: packages/beff-core/tests/report_error.rs
expression: s
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 2 │     type A = STRING;
   │               ───┬──  
   │                  ╰──── Cannot find symbol 'STRING'
───╯

